<resources>
    <string name="app_name">Diabetes School App</string>
    <string name="home_about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="share">Invite Your Friend\'s</string>
    <string name="sponsors">Sponsors</string>
    <string name="about_app">About App</string>
    <string name="rate_us">Rate This App</string>
    <string name="hospital_list">Hospital List</string>
    <string name="schedules">Schedules</string>
    <string name="member_login">Member Login</string>
    <string name="volunteer_login">Volunteer Login</string>
    <string name="user_login">Your Login</string>
    <string name="title_activity_member_login">Member Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_registration_short">Confirm Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_volunteer_login">Volunteer Login</string>
    <string name="title_activity_user_login">User Login</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="doc_list">Doc List</string>
    <string name="check_bmi">Check BMI</string>
    <string name="about_you">About You</string>
    <string name="more">More</string>
    <string name="diabetic_school_app">DIABETIC SCHOOL APP</string>
    <string name="user_registration_area">User Registration Area</string>
    <string name="user_login_area">User Login Area</string>
    <string name="member_login_area">Member Login Area</string>
    <string name="volunteer_login_area">Volunteer Login Area</string>
    <string name="exit_app">Exit</string>
    <string name="exit_desc">Do you want to exit app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="view_profile">View Profile</string>
    <string name="add_new_entry">Add New Entry</string>
    <string name="view_entry">View Entry</string>
</resources>
