<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorActivity"
    android:background="@drawable/background"
    android:padding="@dimen/frame_gap"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="@dimen/other_button"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/diabetic_school_app"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Doctor List will be here"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="normal"
        android:fontFamily="sans-serif-light"
        android:orientation="horizontal"

        android:layout_marginBottom="@dimen/std_gap"
        android:layout_marginTop="@dimen/std_gap">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"
            android:text="@string/home"
            android:textAllCaps="false"
            android:onClick="homeButton"
            android:background="@drawable/menu_background"
            android:layout_margin="@dimen/home_button_gap"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"
            android:textAllCaps="false"
            android:onClick="docListButton"
            android:text="@string/doc_list"
            android:background="@drawable/menu_background"
            android:layout_margin="@dimen/home_button_gap"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"
            android:textAllCaps="false"
            android:onClick="bmiCalculatorsButton"
            android:text="@string/check_bmi"
            android:background="@drawable/menu_background"
            android:layout_margin="@dimen/home_button_gap"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"
            android:textAllCaps="false"
            android:onClick="aboutDiabetesButton"
            android:text="@string/about_you"
            android:background="@drawable/menu_background"
            android:layout_margin="@dimen/home_button_gap"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"
            android:text="@string/more"
            android:onClick="moreButton"
            android:textAllCaps="false"
            android:background="@drawable/menu_background"
            android:layout_margin="@dimen/home_button_gap"/>


    </LinearLayout>

</LinearLayout>