<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/frame_gap"
    android:weightSum="9"
    tools:context=".HomeActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="@dimen/other_button"
        android:gravity="center"
        android:text="@string/diabetic_school_app"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="@dimen/std_gap"
        android:layout_marginBottom="@dimen/std_gap"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/logo1"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/logo1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3">

        <VideoView
            android:id="@+id/homeVideoView"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_weight="4"
            android:layout_marginBottom="@dimen/std_gap"
            android:layout_marginTop="@dimen/std_gap"/>
        <Button
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/menu_background"
            android:onClick="homeVideoView"
            android:text="play"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/home_about"
        android:layout_marginBottom="@dimen/std_gap"
        android:gravity="center"
        android:layout_marginTop="@dimen/std_gap"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"

        android:layout_marginBottom="@dimen/std_gap"
        android:layout_marginTop="@dimen/std_gap">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"
            android:text="@string/home"
            android:textAllCaps="false"
            android:onClick="homeButton"
            android:background="@drawable/menu_background"
            android:layout_margin="@dimen/home_button_gap"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"
            android:textAllCaps="false"
            android:onClick="docListButton"
            android:background="@drawable/menu_background"
            android:text="@string/doc_list"
            android:layout_margin="@dimen/home_button_gap"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"
            android:textAllCaps="false"
            android:onClick="bmiCalculatorsButton"
            android:text="@string/check_bmi"
            android:background="@drawable/menu_background"
            android:layout_margin="@dimen/home_button_gap"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"
            android:textAllCaps="false"
            android:onClick="aboutDiabetesButton"
            android:text="@string/about_you"
            android:background="@drawable/menu_background"
            android:layout_margin="@dimen/home_button_gap"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"
            android:text="@string/more"
            android:onClick="moreButton"
            android:textAllCaps="false"
            android:background="@drawable/menu_background"
            android:layout_margin="@dimen/home_button_gap"/>


    </LinearLayout>

</LinearLayout>