<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/frame_gap"
    android:background="@drawable/background"
    tools:context=".AboutDiabetesActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:textStyle="bold"
        android:textSize="@dimen/other_button"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/diabetic_school_app"/>

   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="7 Points will be here"/>
    </LinearLayout>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/std_gap"
                android:layout_marginBottom="@dimen/std_gap"
                android:layout_weight="3"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="@dimen/std_gap">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="65dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_filter_1_24dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:gravity="center"
                            android:text="Point 1"
                            android:textSize="@dimen/sub_header_text"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="@dimen/std_gap">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="65dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_filter_2_24dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:gravity="center"
                            android:text="Point 2"
                            android:textSize="@dimen/sub_header_text"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/std_gap"
                android:layout_marginBottom="@dimen/std_gap"
                android:layout_weight="3"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="@dimen/std_gap">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="65dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_filter_3_24dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:gravity="center"
                            android:text="Point 3"
                            android:textSize="@dimen/sub_header_text"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="@dimen/std_gap">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="65dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_filter_4_24dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:gravity="center"
                            android:text="Point 4"
                            android:textSize="@dimen/sub_header_text"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/std_gap"
                android:layout_marginBottom="@dimen/std_gap"
                android:layout_weight="3"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="@dimen/std_gap">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="65dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_filter_5_24dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:gravity="center"
                            android:text="Point 5"
                            android:textSize="@dimen/sub_header_text"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="@dimen/std_gap">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="65dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_filter_6_24dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:gravity="center"
                            android:text="Point 6"
                            android:textSize="@dimen/sub_header_text"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/std_gap"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="@dimen/std_gap">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="65dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_filter_7_24dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:gravity="center"
                            android:text="Point 7"
                            android:textSize="@dimen/sub_header_text"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="normal"
        android:fontFamily="sans-serif-light"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/std_gap"
        android:layout_marginTop="@dimen/std_gap">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"
            android:text="@string/home"
            android:textAllCaps="false"
            android:background="@drawable/menu_background"
            android:onClick="homeButton"
            android:layout_margin="@dimen/home_button_gap"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"
            android:textAllCaps="false"
            android:onClick="docListButton"
            android:background="@drawable/menu_background"
            android:text="@string/doc_list"
            android:layout_margin="@dimen/home_button_gap"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"
            android:textAllCaps="false"
            android:onClick="bmiCalculatorsButton"
            android:text="@string/check_bmi"
            android:background="@drawable/menu_background"
            android:layout_margin="@dimen/home_button_gap"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"
            android:textAllCaps="false"
            android:onClick="aboutDiabetesButton"
            android:text="@string/about_you"
            android:background="@drawable/menu_background"
            android:layout_margin="@dimen/home_button_gap"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="normal"
            android:fontFamily="sans-serif-light"
            android:text="@string/more"
            android:onClick="moreButton"
            android:textAllCaps="false"
            android:background="@drawable/menu_background"
            android:layout_margin="@dimen/home_button_gap"/>


    </LinearLayout>
</LinearLayout>